--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Gun Violence in Philly</title>
 </head>
 <body>
+    <header>
+
+        
+        <div class="container">
+
+
+        </div>
+
+
+    </header>
 
 
 </body>
