--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <header>
-
-        
         <div class="container">
+            <img src="images/kk190.jpg" alt="peace symbol" class ="logo">
 
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Why?</a></li>
+                    <li><a href="#">Where?</a></li>
+                    <li><a href="#">Prevention</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
 
         </div>
-
-
     </header>
 
 
