--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <img class="logo" src="images/-removebg-preview.jpg" alt="logo">
         <nav>
             <ul class="nav_links">
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Statistics</a></li>
+                <li><a href="#">Why?</a></li>
+                <li><a href="#">Where?</a></li>
             </ul>
         </nav>
-        <a class="cta" href="#"><button>Contact</button></a>
+        <a class="cta" href="#"><button>Prevention</button></a>
 
     </header>
 
