added CSS folder

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,12 +14,12 @@
         <img class="logo" src="images/-removebg-preview.jpg" alt="logo">
         <nav>
             <ul class="nav_links">
-                <li><a href="#">Statistics</a></li>
-                <li><a href="#">Why?</a></li>
-                <li><a href="#">Where?</a></li>
+                <li><a href="statistics.html">Statistics</a></li>
+                <li><a href="why.html">Why?</a></li>
+                <li><a href="where.html">Where?</a></li>
             </ul>
         </nav>
-        <a class="cta" href="#"><button>Prevention</button></a>
+        <a class="cta" href="prevention.html"><button>Prevention</button></a>
 
     </header>
 
