--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 <!--Navbar Start-->
     <header>
-        <img class="logo" src="images/-removebg-preview.jpg" alt="logo">
+        <img class="logo" src="images/peace-symbol-removebg-preview (1).png" alt="logo">
         <nav>
             <ul class="nav_links">
                 <li><a href="statistics.html">Statistics</a></li>
