--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     </header>
 <!--Navbar End-->
 
+<!--Home Section starts-->
+
+    <section class="home"></section>
+
+<!--Home Section ends-->
 
 
 
