--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 
 <!--Home Section starts-->
 
-    <section class="home"></section>
+    <section class="home">
+        
+
+
+
+    </section>
 
 <!--Home Section ends-->
 
