--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
 
 <!--Home Section starts-->
 
-    <section class="home"></section>
+    <section class="home" id="home">
+        <div class="content">
+            <h3>food made with love</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem provident sequi nam placeat. Amet, aliquam, 
+            enim non maxime dolorum esse ipsa consectetur officia distinctio quibusdam rem sequi? Perferendis, quidem cupiditate?</p>
+            <a href="" class="btn">learn more</a>
+        </div>
+
+        <div class="image">
+            <img src="images/istockphoto-1204415494-612x612-r.png" alt="">
+        </div>
+
+    </section>
 
 <!--Home Section ends-->
 
