added js file, new navbar, and mediaqueries

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/53b84ad2b0.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     
 <!--Navbar Start-->
     <header>
-        <img class="logo" src="images/peace-symbol-removebg-preview (1).png" alt="logo">
-        <nav>
-            <ul class="nav_links">
-                <li><a href="statistics.html">Statistics</a></li>
-                <li><a href="why.html">Why?</a></li>
-                <li><a href="where.html">Where?</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="prevention.html"><button>Prevention</button></a>
+        <a href="index.html"><img class="logo" src="images/peace-symbol-removebg-preview (1).png" alt="logo"></a>
 
+        <i id="menu-bar" class="fa-solid fa-bars fa-beat-fade"></i>
+        
+        <nav class="navbar">
+            <a href="statistics.html">statistics</a>
+            <a href="why.html">why?</a>
+            <a href="where.html">where?</a>
+            <a href="prevention.html">prevention</a>
+        </nav>
     </header>
 <!--Navbar End-->
 
@@ -43,6 +44,8 @@
 
 <!--Home Section ends-->
 
+
+<script src="script.js"></script>
 
 </body>
 </html>
