--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/Website-logo.png">
     <script src="https://kit.fontawesome.com/53b84ad2b0.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Gun Violence in Philly</title>
 </head>
 <body>
     
@@ -31,9 +32,11 @@
 
         <div class="content">
             <h3>gun violence is everywhere</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem provident sequi nam placeat. Amet, aliquam, 
-            enim non maxime dolorum esse ipsa consectetur officia distinctio quibusdam rem sequi? Perferendis, quidem cupiditate?</p>
-            <a href="#" class="btn">learn more</a>
+            <p>In 2022, 514 people were shot and killed in the city of Philadelphia (CBS). That's more than one person every day.
+                There were 2273 people who were victims of shootings in total (CBS). Gun Violence is taking over. We need to find
+                a way to stop it.
+            </p>
+            <a href="statistics.html" class="btn">learn more</a>
         </div>
 
         <div class="image">
@@ -44,6 +47,33 @@
 
 <!--Home Section ends-->
 
+<!--Footer Starts-->
+
+    <div class="footer">
+        <div class="col-1">
+            <h3>useful links</h3>
+            <a href="#">github</a>
+            <a href="#">spotify</a>
+            <a href="#">instagram</a>
+
+        </div>
+        <div class="col-2">
+            <h3>type fact about gun violence!</h3>
+            <form>
+                <input type="text" placeholder="Your Fact Here" required>
+                <br>
+                <button type="submit">submit!</button>
+            </form>
+        </div>
+        <div class="col-3">
+            <h3>Contact</h3>
+            <p>akdusa20@gmail.com</p>
+
+        </div>
+    </div>
+
+
+<!--Footer Ends-->
 
 <script src="script.js"></script>
 
