added animation so that text floats in after background gif finishes playing, done home page, may make minor adjustments later

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
     <div class="footer">
         <div class="col-1">
-            <h3>useful links</h3>
-            <a href="#">github</a>
-            <a href="#">spotify</a>
-            <a href="#">instagram</a>
+            <h3>link</h3>
+            <a href="#">github  <i class="fa-brands fa-github fa-beat" id="github-social"></i></a>
+            <a href="#">spotify  <i class="fa-brands fa-spotify fa-beat" id="spotify-social"></i></a>
+            <a href="#">instagram  <i class="fa-brands fa-instagram fa-beat" id="instagram-social"></i></a>
 
         </div>
         <div class="col-2">
-            <h3>type fact about gun violence!</h3>
+            <h3>share a fact about gun violence</h3>
             <form>
                 <input type="text" placeholder="Your Fact Here" required>
                 <br>
@@ -66,8 +66,8 @@
             </form>
         </div>
         <div class="col-3">
-            <h3>Contact</h3>
-            <p>akdusa20@gmail.com</p>
+            <h3>contact</h3>
+            <p>akdusa20@gmail.com  <i class="fa-solid fa-envelope fa-beat" is="email-social"></i></p>
 
         </div>
     </div>
