--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         
         <nav class="navbar">
             <a href="statistics.html">statistics</a>
-            <a href="why.html">why?</a>
             <a href="where.html">where?</a>
             <a href="prevention.html">prevention</a>
+            <a href="why.html">about the author</a>
         </nav>
     </header>
 <!--Navbar End-->
