--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="statistics.html">statistics</a>
             <a href="where.html">where?</a>
             <a href="prevention.html">prevention</a>
-            <a href="why.html">about the author</a>
+            <a href="about-the-author.html">about the author</a>
         </nav>
     </header>
 <!--Navbar End-->
