--- a/index.html
+++ b/index.html
@@ -49,17 +49,16 @@
 
 <!--Footer Starts-->
 
-    <div class="footer">
-        <div class="col-1">
-            <h3>link</h3>
-            <a href="#">github  <i class="fa-brands fa-github fa-beat" id="github-social"></i></a>
-            <a href="#">spotify  <i class="fa-brands fa-spotify fa-beat" id="spotify-social"></i></a>
-            <a href="#">instagram  <i class="fa-brands fa-instagram fa-beat" id="instagram-social"></i></a>
+<div class="footer">
+    <div class="col-1">
+        <h3>link</h3>
+        <a href="#">github <i class="fa-brands fa-github fa-beat" id="github-social"></i></a>
+        <a href="#">spotify <i class="fa-brands fa-spotify fa-beat" id="spotify-social"></i></a>
+        <a href="#">instagram <i class="fa-brands fa-instagram fa-beat" id="instagram-social"></i></a>
 
-        </div>
-        <div class="col-2">
-            <h3>share a fact about gun violence</h3>
-            <form>
+    </div>
+    <div class="col-2">
+        <h3>share a fact about gun violence</h3><form>
                 <input type="text" placeholder="Your Fact Here" required>
                 <br>
                 <button type="submit">submit!</button>
