--- a/statistics.html
+++ b/statistics.html
@@ -10,17 +10,33 @@
 <body>
     <!--Navbar Start-->
     <header>
-        <img class="logo" src="images/-removebg-preview.jpg" alt="logo">
-        <nav>
-            <ul class="nav_links">
-                <li><a href="statistics.html">Statistics</a></li>
-                <li><a href="why.html">Why?</a></li>
-                <li><a href="where.html">Where?</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="prevention.html"><button>Prevention</button></a>
+        <a href="index.html"><img class="logo" src="images/Statistics-logo.png" alt="logo"></a>
 
+        <i id="menu-bar" class="fa-solid fa-bars fa-beat-fade"></i>
+        
+        <nav class="navbar">
+            <a href="statistics.html">statistics</a>
+            <a href="where.html">where?</a>
+            <a href="prevention.html">prevention</a>
+            <a href="about-the-author.html">about me</a>
+        </nav>
     </header>
-<!--Navbar End-->
+    <!--Navbar End-->
+
+    <!--Typing Animation Start-->
+    <div class="wrapper">
+        <div class="static-txt">In 2022, Guns Caused:</div>
+        <ul class="dynamic-txts">
+            <li><span>474 Deaths</span></li>
+            <li><span> 1788 Victims</span></li>
+            <li><span> 516 Homicides</span></li>
+            <li><span> 217 Minors To Be Killed</span></li>
+        </ul>
+    </div>    
+    <!--Typing Animation End-->
+
+
+
+
 </body>
 </html>
