--- a/statistics.html
+++ b/statistics.html
@@ -24,19 +24,50 @@
     <!--Navbar End-->
 
     <!--Typing Animation Start-->
-    <div class="wrapper">
-        <div class="static-txt">In 2022, Guns Caused:</div>
-        <ul class="dynamic-txts">
-            <li><span>474 Deaths</span></li>
-            <li><span> 1788 Victims</span></li>
-            <li><span> 516 Homicides</span></li>
-            <li><span> 217 Minors To Be Killed</span></li>
-        </ul>
-    </div>    
+
+    <section class="home" id="home">
+        <div class="wrapper">
+            <div class="static-txt">In 2022, Guns Caused:</div>
+            <ul class="dynamic-txts">
+                <li><span>474 Deaths</span></li>
+                <li><span> 1788 Victims</span></li>
+                <li><span> 516 Homicides</span></li>
+                <li><span> 217 Minors To Be Killed</span></li>
+            </ul>
+        </div>  
+    </section>
     <!--Typing Animation End-->
+    <!--Learn More Symbol-->
+
+    <!--Learn More Symbol End-->
 
 
+    <!--Footer Starts-->
 
+    <div class="footer">
+        <div class="col-1">
+            <h3>link</h3>
+            <a href="#">github <i class="fa-brands fa-github fa-beat" id="github-social"></i></a>
+            <a href="#">spotify <i class="fa-brands fa-spotify fa-beat" id="spotify-social"></i></a>
+            <a href="#">instagram <i class="fa-brands fa-instagram fa-beat" id="instagram-social"></i></a>
+
+        </div>
+        <div class="col-2">
+            <h3>share a fact about gun violence</h3><form>
+                    <input type="text" placeholder="Your Fact Here" required>
+                    <br>
+                    <button type="submit">submit!</button>
+                </form>
+            </div>
+            <div class="col-3">
+                <h3>contact</h3>
+                <p>akdusa20@gmail.com  <i class="fa-solid fa-envelope fa-beat" is="email-social"></i></p>
+
+            </div>
+        </div>
+
+
+    <!--Footer Ends-->
 
 </body>
 </html>
