added file to copy code from

--- a/statistics.html
+++ b/statistics.html
@@ -23,24 +23,26 @@
     </header>
     <!--Navbar End-->
 
-    <!--Typing Animation Start-->
+    <!--Home Section starts-->
 
     <section class="home" id="home">
-        <div class="wrapper">
-            <div class="static-txt">In 2022, Guns Caused:</div>
-            <ul class="dynamic-txts">
-                <li><span>474 Deaths</span></li>
-                <li><span> 1788 Victims</span></li>
-                <li><span> 516 Homicides</span></li>
-                <li><span> 217 Minors To Be Killed</span></li>
-            </ul>
-        </div>  
+
+        <div class="content">
+            <h3>gun violence is everywhere</h3>
+            <p>In 2022, 514 people were shot and killed in the city of Philadelphia (CBS). That's more than one person every day.
+                There were 2273 people who were victims of shootings in total (CBS). Gun Violence is taking over. We need to find
+                a way to stop it.
+            </p>
+            <a href="statistics.html" class="btn">learn more</a>
+        </div>
+
+        <div class="image">
+            <img src="images/istockphoto-1204415494-612x612-r.png" id="img" alt="">
+        </div>
+
     </section>
-    <!--Typing Animation End-->
-    <!--Learn More Symbol-->
 
-    <!--Learn More Symbol End-->
-
+    <!--Home Section ends-->
 
     <!--Footer Starts-->
 
@@ -68,6 +70,8 @@
 
 
     <!--Footer Ends-->
+
+    <script src="script.js"></script>
 
 </body>
 </html>
