--- a/statistics.html
+++ b/statistics.html
@@ -27,22 +27,54 @@
 
     <section class="home" id="home">
 
-        <div class="content">
-            <h3>gun violence is everywhere</h3>
-            <p>In 2022, 514 people were shot and killed in the city of Philadelphia (CBS). That's more than one person every day.
-                There were 2273 people who were victims of shootings in total (CBS). Gun Violence is taking over. We need to find
-                a way to stop it.
-            </p>
-            <a href="statistics.html" class="btn">learn more</a>
-        </div>
+        <div class="wrapper">
+            <div class="static-txt">In 2022, Guns Caused: </div>
+            <ul class="dynamic-txts">
+                <li><span>474 Deaths</span></li>
+                <li><span>1788 Victims</span></li>
+                <li><span>516 Homicides</span></li>
+                <li><span>217 Minors To Be Killed</span></li>
+            </ul>
+        </div> 
 
-        <div class="image">
-            <img src="images/istockphoto-1204415494-612x612-r.png" id="img" alt="">
+        <div class="content">
+            <p>There are many gun violence incidents every year in Philly. These happen in different areas of the city, but 
+                according to data, the most violent areas are towards North Philly. In 2022, there were so many gun incidents 
+                and even though it was less than 2021, it is still unimaginably higher than before the pandemic. This got me thinking,
+                is the pandemic to blame? Even though there could be many different reasons that these might occur, its important to look at
+                the data we have, because without it, we will never be able to find a way to prevent gun violence
+            </p>
+            <a href="#data" class="btn">learn more</a>
         </div>
 
     </section>
 
     <!--Home Section ends-->
+
+
+     <!--Data Section Starts-->
+
+     <section class="data" id="data">
+        <table>
+            <tr>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+    </section>
+
+    <!--Data Section ends-->
 
     <!--Footer Starts-->
 
