--- a/statistics.html
+++ b/statistics.html
@@ -54,7 +54,10 @@
 
      <!--Data Section Starts-->
 
-     <section class="data" id="data">
+    <section class="data" id="data">
+
+        <div>data here</div>
+        
         <table>
             <tr>
               <th></th>
@@ -72,6 +75,8 @@
               <td></td>
             </tr>
           </table>
+
+
     </section>
 
     <!--Data Section ends-->
