--- a/statistics.html
+++ b/statistics.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="statistics.css">
-    <title>Statistics</title>
+    <link rel="icon" href="images/Website-logo.png">
+    <title>Philly Gun Violence Statistics</title>
 </head>
 <body>
     <!--Navbar Start-->
@@ -57,7 +58,7 @@
     <section class="data" id="data">
 
         <div>data here</div>
-        
+
         <table>
             <tr>
               <th></th>
