--- a/statistics.html
+++ b/statistics.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="statistics.css">
-    <link rel="icon" href="images/statistics-logo.png">
+    <link rel="icon" href="images/Website-logo.png">
     <title>Philly Gun Violence Statistics</title>
 </head>
 <body>
