--- a/statistics.html
+++ b/statistics.html
@@ -26,61 +26,9 @@
 
     <!--Home Section starts-->
 
-    <section class="home" id="home">
+    
 
-        <div class="wrapper">
-            <div class="static-txt">In 2022, Guns Caused: </div>
-            <ul class="dynamic-txts">
-                <li><span>474 Deaths</span></li>
-                <li><span>1788 Victims</span></li>
-                <li><span>516 Homicides</span></li>
-                <li><span>217 Minors To Be Killed</span></li>
-            </ul>
-        </div> 
-
-        <div class="content">
-            <p>There are many gun violence incidents every year in Philly. These happen in different areas of the city, but 
-                according to data, the most violent areas are towards North Philly. In 2022, there were so many gun incidents 
-                and even though it was less than 2021, it is still unimaginably higher than before the pandemic. This got me thinking,
-                is the pandemic to blame? Even though there could be many different reasons that these might occur, its important to look at
-                the data we have, because without it, we will never be able to find a way to prevent gun violence
-            </p>
-            <a href="#data" class="btn">learn more</a>
-        </div>
-
-    </section>
-
-    <!--Home Section ends-->
-
-
-     <!--Data Section Starts-->
-
-    <section class="data" id="data">
-
-        <div>data here</div>
-
-        <table>
-            <tr>
-              <th></th>
-              <th></th>
-              <th></th>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-          </table>
-
-
-    </section>
-
-    <!--Data Section ends-->
+    <!--Scroll Animation Section ends-->
 
     <!--Footer Starts-->
 
