added 2 more images for home screen scroll

--- a/statistics.html
+++ b/statistics.html
@@ -24,7 +24,7 @@
     </header>
     <!--Navbar End-->
 
-    <!--Home Section starts-->
+    <!--Scroll Animationst Section starts-->
 
     
 
@@ -57,7 +57,7 @@
 
     <!--Footer Ends-->
 
-    <script src="script.js"></script>
+    <script src="statistics.js"></script>
 
 </body>
 </html>
