created new home page

--- a/statistics.html
+++ b/statistics.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="statistics.css">
     <link rel="icon" href="images/Website-logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Philly Gun Violence Statistics</title>
 </head>
 <body>
@@ -24,7 +25,56 @@
     </header>
     <!--Navbar End-->
 
-    <!--Scroll Animationst Section starts-->
+    <!--Scroll Animations Section starts-->
+    <section class="sec-01">
+        <div class="container">
+            <h2 class="main-title">Substitute this later</h2>
+            <div class="content">
+                <div class="image">
+                    <img src="images/statistics-home-1.jpeg" alt="">
+                </div>
+                <div class="text-box">
+                    <h3>lorem ipsim</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam provident nihil, harum nostrum aut delectus, 
+                    non maxime eos est, totam tenetur reiciendis fugit officia dolores sequi rerum dignissimos ipsum nulla.</p>
+                </div>
+            </div>
+            
+        </div>
+    </section>
+
+    <section class="sec-02">
+        <div class="container">
+            <h3 class="section-title">lorem ipsem</h3>
+            <div class="content">
+                <div class="image">
+                    <img src="images/statistics-home-2.jpeg" alt=""> 
+                </div>
+                <div class="info">
+                    <h4 class="info-title">Description</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem adipisci unde corporis eligendi excepturi cumque? 
+                    Quibusdam perferendis soluta ab vero tenetur tempore explicabo consectetur? Distinctio ut nam ea hic voluptatem!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="sec-03">
+        <div class="container">
+            <h3 class="section-title">lorem ipsem</h3>
+            <div class="content">
+                <div class="image">
+                    <img src="images/statistics-home-3.jpeg" alt=""> 
+                </div>
+                <div class="info">
+                    <h4 class="info-title">Description</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem adipisci unde corporis eligendi excepturi cumque? 
+                    Quibusdam perferendis soluta ab vero tenetur tempore explicabo consectetur? Distinctio ut nam ea hic voluptatem!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     
 
@@ -53,7 +103,6 @@
 
             </div>
         </div>
-
 
     <!--Footer Ends-->
 
