--- a/statistics.html
+++ b/statistics.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="statistics.css">
     <link rel="icon" href="images/Website-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <script src="https://unpkg.com/scrollreveal"></script>    
     <title>Philly Gun Violence Statistics</title>
 </head>
 <body>
@@ -106,7 +107,17 @@
 
     <!--Footer Ends-->
 
-    <script src="statistics.js"></script>
+    <script>
+
+    ScrollReveal({ 
+        reset: true,
+        distance: '60px',
+        duration: 2500,
+        delay: 400
+    });
+
+    ScrollReveal().reveal('.main-title', { delay: 500 });
+    </script>
 
 </body>
 </html>
