--- a/statistics.html
+++ b/statistics.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="statistics.css">
     <link rel="icon" href="images/Website-logo.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <script src="https://unpkg.com/scrollreveal"></script>    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">  
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <title>Philly Gun Violence Statistics</title>
+    
 </head>
 <body>
     <!--Navbar Start-->
@@ -29,12 +30,12 @@
     <!--Scroll Animations Section starts-->
     <section class="sec-01">
         <div class="container">
-            <h2 class="main-title">Substitute this later</h2>
+            <h2 class="main-title" data-aos="fade-in" data-aos-duration="3000">Substitute this later</h2>
             <div class="content">
-                <div class="image">
+                <div class="image" data-aos="fade-left" data-aos-duration="1500">
                     <img src="images/statistics-home-1.jpeg" alt="">
                 </div>
-                <div class="text-box">
+                <div class="text-box" data-aos="fade-right" data-aos-duration="2000">
                     <h3>lorem ipsim</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam provident nihil, harum nostrum aut delectus, 
                     non maxime eos est, totam tenetur reiciendis fugit officia dolores sequi rerum dignissimos ipsum nulla.</p>
@@ -46,12 +47,12 @@
 
     <section class="sec-02">
         <div class="container">
-            <h3 class="section-title">lorem ipsem</h3>
+            <h3 class="section-title" data-aos="fade-in" data-aos-duration="3000">lorem ipsem</h3>
             <div class="content">
-                <div class="image">
+                <div class="image" data-aos="fade-left" data-aos-duration="1500">
                     <img src="images/statistics-home-2.jpeg" alt=""> 
                 </div>
-                <div class="info">
+                <div class="text-box" data-aos="fade-right" data-aos-duration="2000">
                     <h4 class="info-title">Description</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem adipisci unde corporis eligendi excepturi cumque? 
                     Quibusdam perferendis soluta ab vero tenetur tempore explicabo consectetur? Distinctio ut nam ea hic voluptatem!</p>
@@ -62,12 +63,12 @@
 
     <section class="sec-03">
         <div class="container">
-            <h3 class="section-title">lorem ipsem</h3>
+            <h3 class="section-title" data-aos="fade-in" data-aos-duration="3000">lorem ipsem</h3>
             <div class="content">
-                <div class="image">
+                <div class="image" data-aos="fade-left" data-aos-duration="2000">
                     <img src="images/statistics-home-3.jpeg" alt=""> 
                 </div>
-                <div class="info">
+                <div class="text-box" data-aos="fade-right" data-aos-duration="2000">
                     <h4 class="info-title">Description</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem adipisci unde corporis eligendi excepturi cumque? 
                     Quibusdam perferendis soluta ab vero tenetur tempore explicabo consectetur? Distinctio ut nam ea hic voluptatem!</p>
@@ -106,17 +107,11 @@
         </div>
 
     <!--Footer Ends-->
-
+    
+    <!--Script for Animation on Scroll-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-
-    ScrollReveal({ 
-        reset: true,
-        distance: '60px',
-        duration: 2500,
-        delay: 400
-    });
-
-    ScrollReveal().reveal('.main-title', { delay: 500 });
+      AOS.init();
     </script>
 
 </body>
