--- a/statistics.html
+++ b/statistics.html
@@ -47,7 +47,7 @@
 
     <section class="sec-02">
         <div class="container">
-            <h3 class="section-title" data-aos="fade-in" data-aos-duration="3000">lorem ipsem</h3>
+            <h3 class="section-title" data-aos="fade-in" data-aos-duration="3000">Substitue This Later</h3>
             <div class="content">
                 <div class="image" data-aos="fade-left" data-aos-duration="1500">
                     <img src="images/statistics-home-2.jpeg" alt=""> 
@@ -63,7 +63,7 @@
 
     <section class="sec-03">
         <div class="container">
-            <h3 class="section-title" data-aos="fade-in" data-aos-duration="3000">lorem ipsem</h3>
+            <h3 class="section-title" data-aos="fade-in" data-aos-duration="3000">Substitute This Later</h3>
             <div class="content">
                 <div class="image" data-aos="fade-left" data-aos-duration="2000">
                     <img src="images/statistics-home-3.jpeg" alt=""> 
