--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <a href="index.html"><img class="logo" src="images/peace-symbol-removebg-preview (1).png" alt="logo"></a>
 
-        <i id="menu-bar" class="fa-solid fa-bars fa-beat-fade"></i>
+        <div id="menu-bar" class="fas fa-bars"></div>
         
         <nav class="navbar">
             <a href="statistics.html">statistics</a>
@@ -75,7 +75,7 @@
 
 <!--Footer Ends-->
 
-<script src="script.js"></script>
+<script src="index.js"></script>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
