--- a/statistics.html
+++ b/statistics.html
@@ -77,7 +77,21 @@
         </div>
     </section>
 
-
+    <section class="sec-04">
+        <div class="container">
+            <h3 class="section-title" data-aos="fade-in" data-aos-duration="3000">Substitute This Later</h3>
+            <div class="content">
+                <div class="image" data-aos="fade-left" data-aos-duration="2000">
+                    <img src="images/statistics-home-3.jpeg" alt=""> 
+                </div>
+                <div class="text-box" data-aos="fade-right" data-aos-duration="2000">
+                    <h4 class="info-title">Description</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem adipisci unde corporis eligendi excepturi cumque? 
+                    Quibusdam perferendis soluta ab vero tenetur tempore explicabo consectetur? Distinctio ut nam ea hic voluptatem!</p>
+                </div>
+            </div>
+        </div>
+    </section>
     
 
     <!--Scroll Animation Section ends-->
@@ -113,6 +127,8 @@
     <script>
       AOS.init();
     </script>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
