--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -20,7 +20,7 @@
         
         <nav class="navbar">
             <a href="statistics.html">statistics</a>
-            <a href="where.html">where</a>
+            <a href="where.html">where?</a>
             <a href="prevention.html">prevention</a>
             <a href="about-the-author.html">about me</a>
         </nav>
