--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -14,15 +14,15 @@
     
 <!--Navbar Start-->
     <header>
-        <a href="index.html"><img class="logo" src="images/peace-symbol-removebg-preview (1).png" alt="logo"></a>
+        <a href="../Home-Page/index.html"><img class="logo" src="../images/peace-symbol-removebg-preview (1).png" alt="logo"></a>
 
         <div id="menu-bar" class="fas fa-bars"></div>
         
         <nav class="navbar">
-            <a href="statistics.html">statistics</a>
-            <a href="where.html">where?</a>
-            <a href="prevention.html">prevention</a>
-            <a href="about-the-author.html">about me</a>
+            <a href="../Statistics-Page/statistics.html">statistics</a>
+            <a href="../Where-Page/where.html">where?</a>
+            <a href="../Prevention-Page/prevention.html">prevention</a>
+            <a href="../About-The-Author-Page/about-the-author.html">about me</a>
         </nav>
     </header>
 <!--Navbar End-->
@@ -37,11 +37,11 @@
                 There were 2273 people who were victims of shootings in total (CBS). Gun Violence is taking over. We need to find
                 a way to stop it.
             </p>
-            <a href="statistics.html" class="btn" data-aos="fade-left" data-aos-duration="3000">learn more</a>
+            <a href="../Statistics-Page/statistics.html" class="btn" data-aos="fade-left" data-aos-duration="3000">learn more</a>
         </div>
 
         <div class="image">
-            <img src="images/istockphoto-1204415494-612x612-r.png" id="img" alt="" data-aos="fade-right" data-aos-duration="3000">
+            <img src="../images/istockphoto-1204415494-612x612-r.png" id="img" alt="" data-aos="fade-right" data-aos-duration="3000">
         </div>
 
     </section>
