created hamburger menu, css, created button, new home page, TESTING

--- a/TESTING/Home-Page/index.html
+++ b/TESTING/Home-Page/index.html
@@ -13,33 +13,29 @@
 <body>
     
 <!--Hamburger Menu Starts-->
-    <div class="menu-container">
+    <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger">
             <div></div>
         </div>
-    </div>
-    
-    <div class="menu">
-        <div>
+        <div class="menu">
             <div>
-                <ul>
-                    <li><a href="">Statistics</a></li>
-                    <li><a href="">Where</a></li>
-                    <li><a href="">Prevention</a></li>
-                    <li><a href="">About Me</a></li>
-                </ul>
+                <div>
+                    <ul>
+                        <li><a href="#">Statistics</a></li>
+                        <li><a href="#">Where</a></li>
+                        <li><a href="#">Prevention</a></li>
+                        <li><a href="#">My Mission</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-
     <div class="container">
         <div class="content">
-            <h1>Welcome</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Magni molestias qui itaque quis libero inventore quam doloremque ipsa! 
-            Quod, possimus?</p>
-            <a href="" class="btn">Learn more</a>
+            <h2>Welcome</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+            <a href="#" class="btn">Read more</a>
         </div>
     </div>
 <!--Hamburger Menu Ends-->
