--- a/OFFICIAL/Home-Page/index.html
+++ b/OFFICIAL/Home-Page/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col-3">
             <h3>contact</h3>
-            <p>akdusa20@gmail.com  <i class="fa-solid fa-envelope fa-beat" is="email-social"></i></p>
+            <p>akdusa20@gmail.com  <i class="fa-solid fa-envelope fa-beat" id="email-social"></i></p>
 
         </div>
     </div>
