--- a/TESTING/Home-Page/index.html
+++ b/TESTING/Home-Page/index.html
@@ -13,6 +13,7 @@
 <body>
     
 <!--Hamburger Menu Starts-->
+<!--
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger">
@@ -38,33 +39,32 @@
             <a href="#" class="btn">Read more</a>
         </div>
     </div>
+-->
 <!--Hamburger Menu Ends-->
 
 <!--Footer Starts-->
-
-<div class="footer">
-    <div class="col-1">
-        <h3>link</h3>
-        <a href="#">github <i class="fa-brands fa-github fa-beat" id="github-social"></i></a>
-        <a href="#">spotify <i class="fa-brands fa-spotify fa-beat" id="spotify-social"></i></a>
-        <a href="#">instagram <i class="fa-brands fa-instagram fa-beat" id="instagram-social"></i></a>
-
-    </div>
-    <div class="col-2">
-        <h3>share a fact about gun violence</h3><form>
-                <input type="text" placeholder="Your Fact Here" required>
-                <br>
-                <button type="submit">submit!</button>
-            </form>
-        </div>
-        <div class="col-3">
-            <h3>contact</h3>
-            <p>akdusa20@gmail.com  <i class="fa-solid fa-envelope fa-beat" is="email-social"></i></p>
-
-        </div>
+    <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
     </div>
 
-
+    <footer>
+        <ul class="social-icon">
+            <li><a href="#"><i class="fa-solid fa-envelope fa-beat"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-github fa-beat"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-spotify fa-beat"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram fa-beat"></i></a></li>
+        </ul>
+        <ul class="footer-menu">
+            <li><a href="#">Statistics</a></li>
+            <li><a href="#">Where</a></li>
+            <li><a href="#">Prevention</a></li>
+            <li><a href="#">My Mission</a></li>
+        </ul>
+        <p>©AKD2022 | All Rights Reserved</p>
+    </footer>
 <!--Footer Ends-->
 
 <script src="index.js"></script>
