added fading animation without the js script, changed the color of background when hovering over links on navbar, deleted js script

--- a/TESTING/Home-Page/index.html
+++ b/TESTING/Home-Page/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/Website-logo.png">
+    <link rel="icon" href="../images/Website-logo.png">
     <script src="https://kit.fontawesome.com/53b84ad2b0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <title>Gun Violence in Philly</title>
@@ -13,7 +13,6 @@
 <body>
     
 <!--Hamburger Menu Starts-->
-<!--
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger">
@@ -23,7 +22,7 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="#">Statistics</a></li>
+                        <li><a href="#" >Statistics</a></li>
                         <li><a href="#">Where</a></li>
                         <li><a href="#">Prevention</a></li>
                         <li><a href="#">My Mission</a></li>
@@ -34,38 +33,13 @@
     </div>
     <div class="container">
         <div class="content">
-            <h2>Welcome</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
-            <a href="#" class="btn">Read more</a>
+            <h2 id="h2-fade">Welcome</h2>
+            <p id="p-fade">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+            <a href="#" class="btn" id="btn-fade">Learn more</a>
         </div>
     </div>
--->
 <!--Hamburger Menu Ends-->
-
-<!--Footer Starts-->
-    <div class="waves">
-        <div class="wave" id="wave1"></div>
-        <div class="wave" id="wave2"></div>
-        <div class="wave" id="wave3"></div>
-        <div class="wave" id="wave4"></div>
-    </div>
-
-    <footer>
-        <ul class="social-icon">
-            <li><a href="#"><i class="fa-solid fa-envelope fa-beat"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-github fa-beat"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-spotify fa-beat"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram fa-beat"></i></a></li>
-        </ul>
-        <ul class="footer-menu">
-            <li><a href="#">Statistics</a></li>
-            <li><a href="#">Where</a></li>
-            <li><a href="#">Prevention</a></li>
-            <li><a href="#">My Mission</a></li>
-        </ul>
-        <p>©AKD2022 | All Rights Reserved</p>
-    </footer>
-<!--Footer Ends-->
+    
 
 <script src="index.js"></script>
 
