--- a/TESTING/Statistics-Page/statistics.html
+++ b/TESTING/Statistics-Page/statistics.html
@@ -22,6 +22,7 @@
             <div>
                 <div>
                     <ul>
+                        <li><a href="../Home-Page/index.html" >Home</a></li>
                         <li><a href="../Statistics-Page/statistics.html" >Statistics</a></li>
                         <li><a href="../Where-Page/where.html">Where</a></li>
                         <li><a href="../Prevention-Page/prevention.html">Prevention</a></li>
@@ -33,9 +34,11 @@
     </div>
     <div class="home-container">
         <div class="home-content">
-            <h2>Welcome</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
-            <a href="../Statistics-Page/statistics.html">Learn more</a>
+            <h2>Gun Violence is Taking Over</h2>
+            <p>We all know that gun violence has a significant impact on our lives today, but we might not all realize
+                how much its acutally happening.
+            </p>
+            <p id="scroll-down">(Scroll Down ↓)</p>
         </div>
     </div>
 <!--Hamburger Menu Ends-->
@@ -96,7 +99,7 @@
             <h3 class="section-title">Substitute This Later</h3>
             <div class="content">
                 <div class="image">
-                    <img src="../images/statistics-home-3.jpeg" alt=""> 
+                    <img src="../images/statistics-home-4.jpeg" alt=""> 
                 </div>
                 <div class="text-box">
                     <h4 class="info-title">Description</h4>
