--- a/TESTING/Statistics-Page/statistics.html
+++ b/TESTING/Statistics-Page/statistics.html
@@ -33,8 +33,8 @@
         </div>
     </div>
 <!--Hamburger Menu Ends-->
-    
-    
+
+
 <!--Information Starts-->
     <div class="slider">
         <div class="controls">
@@ -54,6 +54,7 @@
                     rerum quasi maiores nulla quam. Cum laborum nobis dolor eveniet quaerat quia pariatur
                     quisquam illo mollitia. Voluptate suscipit eligendi 
                     repudiandae nulla laboriosam optio! Exercitationem voluptate reiciendis aspernatur.</p>
+                    <h6>(1/5)</h6>
                 </div>
                 <div class="second">
                     <h2 class="section-title">Mysore</h2>
@@ -61,22 +62,26 @@
                         Officiis dolores laborum ipsa natus. Aperiam, inventore. Laudantium, quis. Minus dolore quibusdam 
                         aperiam officiis quo ab excepturi, aliquam eum eveniet dolores sapiente, itaque
                         molestiae aspernatur voluptate delectus? Quae temporibus ex nam consequuntur, eaque officia laborum culpa quas adipisci.</p>
+                        <h6>(2/5)</h6>
                 </div>
                 <div class="third">
                     <h2 class="section-title">Chennai</h2>
                     <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus laboriosam officiis 
                     nemo molestias illum? Illo, autem a harum quasi ipsum qui, quam, nisi optio mollitia recusandae 
                     impedit cumque ab ullam!</p>
+                    <h6>(3/5)</h6>
                 </div>
                 <div class="fourth">
                     <h2 class="section-title">Delhi</h2>
                     <p class="text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est saepe minus aspernatur quisquam delectus adipisci, 
                     molestias quo dignissimos sint corrupti ex itaque veniam, iusto placeat ipsum? Voluptatibus cupiditate autem eveniet.</p>
+                    <h6>(4/5)</h6>
                 </div>
                 <div class="fifth">
                     <h2 class="section-title">LL</h2>
                     <p class="text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est saepe minus aspernatur quisquam delectus adipisci, 
                     molestias quo dignissimos sint corrupti ex itaque veniam, iusto placeat ipsum? Voluptatibus cupiditate autem eveniet.</p>
+                    <h6>(5/5)</h6>
                 </div>
             </div>
             <div class="right">
@@ -90,9 +95,10 @@
         </div>
     </div>
 
+
 <!--Information Ends-->
 
     <script src="statistics.js"></script>
-
+    <script src="app.js"></script>
     </body>
 </html>
