--- a/TESTING/Statistics-Page/statistics.html
+++ b/TESTING/Statistics-Page/statistics.html
@@ -34,8 +34,27 @@
     </div>
 <!--Hamburger Menu Ends-->
 
+<!--Intro Starts-->
+
+
+<section class="intro-sec">
+    <h1>This Happens Every Day</h1>
+    <h2>(Scroll Down ↓)</h2>
+  </section>
+
+<div class="intro">
+    <h1></h1>
+    <video src="/Users/akdas/Desktop/Videos/Gun_Slo_mo.mov "></video>
+  </div>
+
+<section class="intro-sec2">
+    <h2>We might Know its happening, but we don't actually know how much its happening</h2>
+    <h4>Scroll Down To Learn More ↓</h4>
+</section>
+<!--Intro Ends-->
 
 <!--Information Starts-->
+<section class="information">
     <div class="slider">
         <div class="controls">
             <div class="up">
@@ -94,10 +113,46 @@
             </div>
         </div>
     </div>
+</section>
 
 
 <!--Information Ends-->
 
+<!--Go To WherePage Start-->
+<section class="towhere">
+    <div class="video-wrapper">
+        <video playsinline autoplay muted loop poster="cake.jpg">
+        <source src="/Users/akdas/Desktop/Videos/bg_video.mov " type="video/mp4">
+        Your browser does not support the video tag.
+        </video>
+    
+        <div class="header">
+        <h1>We know the Statistics</h1>
+        <p>But to actually stop gun violence in philly, we need to know where it happens the most, 
+            so we can target it, and eradicate it from those ares</p>
+        <a href="#">Learn Where</a>
+        </div>
+    </div>
+</section>
+<!--Go To WherePage End-->
+    
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"
+      integrity="sha256-2p2tRZlPowp3P/04Pw2rqVCSbhyV/IB7ZEVUglrDS/c="
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"
+      integrity="sha256-peenofh8a9TIqKdPKIeQE7mJvuwh+J0To7nslvpj1jI="
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.js"
+      integrity="sha256-31FC/OT6XpfjAhj9FuXjw5/wPXXawCAjJQ29E23/XPk="
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
+      integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U="
+      crossorigin="anonymous"></script>
     <script src="statistics.js"></script>
     <script src="app.js"></script>
     </body>
