--- a/TESTING/Statistics-Page/statistics.html
+++ b/TESTING/Statistics-Page/statistics.html
@@ -48,8 +48,7 @@
   </div>
 
 <section class="intro-sec2">
-    <h2>We might Know its happening, but we don't actually know how much its happening</h2>
-    <h4>Scroll Down To Learn More ↓</h4>
+    <h2>We might know its happening, but we don't actually know how much its happening</h2>
 </section>
 <!--Intro Ends-->
 
