--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="../images/Website-logo.png">
+    <link rel="stylesheet" href="Home-Page/style.css">
+    <link rel="icon" href="images/Website-logo.png">
     <script src="https://kit.fontawesome.com/53b84ad2b0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <title>Gun Violence in Philly</title>
@@ -22,10 +22,10 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="../Statistics-Page/statistics.html" >Statistics</a></li>
-                        <li><a href="../Where-Page/where.html">Where</a></li>
-                        <li><a href="../Prevention-Page/prevention.html">Prevention</a></li>
-                        <li><a href="../About-The-Author-Page/about-the-author.html">My Mission</a></li>
+                        <li><a href="Statistics-Page/statistics.html" >Statistics</a></li>
+                        <li><a href="Where-Page/where.html">Where</a></li>
+                        <li><a href="Prevention-Page/prevention.html">Prevention</a></li>
+                        <li><a href="About-The-Author-Page/about-the-author.html">My Mission</a></li>
                     </ul>
                 </div>
             </div>
@@ -35,13 +35,13 @@
         <div class="content">
             <h2 id="h2-fade">Welcome</h2>
             <p id="p-fade">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
-            <a href="../Statistics-Page/statistics.html" class="btn" id="btn-fade">Learn more</a>
+            <a href="Statistics-Page/statistics.html" class="btn" id="btn-fade">Learn more</a>
         </div>
     </div>
 <!--Hamburger Menu Ends-->
     
 
-<script src="index.js"></script>
+<script src="Home-Page/index.js"></script>
 
 </body>
 </html>
