--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="">
-    <link rel="stylesheet" href="Home-Page/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="icon" href="images/Website-logo.png">
     <script src="https://kit.fontawesome.com/53b84ad2b0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -41,7 +41,7 @@
 <!--Hamburger Menu Ends-->
     
 
-<script src="Home-Page/index.js"></script>
+<script src="JS/index.js"></script>
 
 </body>
 </html>
