--- a/statistics.html
+++ b/statistics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="statistics.css">
+    <link rel="stylesheet" href="CSS/statistics.css">
     <link rel="icon" href="images/Website-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">  
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -22,11 +22,11 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="../Home-Page/index.html" >Home</a></li>
-                        <li><a href="../Statistics-Page/statistics.html" >Statistics</a></li>
-                        <li><a href="../Where-Page/where.html">Where</a></li>
-                        <li><a href="../Prevention-Page/prevention.html">Prevention</a></li>
-                        <li><a href="../About-The-Author-Page/about-the-author.html">My Mission</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="statistics.html">Statistics</a></li>
+                        <li><a href="where.html">Where</a></li>
+                        <li><a href="prevention.html">Prevention</a></li>
+                        <li><a href="about-the-author.html">My Mission</a></li>
                     </ul>
                 </div>
             </div>
@@ -152,7 +152,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
       integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U="
       crossorigin="anonymous"></script>
-    <script src="statistics.js"></script>
-    <script src="app.js"></script>
+    <script src="JS/statistics.js"></script>
+    <script src="JS/app.js"></script>
     </body>
 </html>
