--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="Statistics-Page/statistics.html" >Statistics</a></li>
-                        <li><a href="Where-Page/where.html">Where</a></li>
-                        <li><a href="Prevention-Page/prevention.html">Prevention</a></li>
-                        <li><a href="About-The-Author-Page/about-the-author.html">My Mission</a></li>
+                        <li><a href="statistics.html" >Statistics</a></li>
+                        <li><a href="where.html">Where</a></li>
+                        <li><a href="prevention.html">Prevention</a></li>
+                        <li><a href="about-the-author.html">My Mission</a></li>
                     </ul>
                 </div>
             </div>
@@ -35,7 +35,7 @@
         <div class="content">
             <h2 id="h2-fade">Welcome</h2>
             <p id="p-fade">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
-            <a href="Statistics-Page/statistics.html" class="btn" id="btn-fade">Learn more</a>
+            <a href="statistics.html" class="btn" id="btn-fade">Learn more</a>
         </div>
     </div>
 <!--Hamburger Menu Ends-->
