--- a/statistics.html
+++ b/statistics.html
@@ -44,7 +44,7 @@
 
 <div class="intro">
     <h1></h1>
-    <video src="/Users/akdas/Desktop/Videos/Gun_Slo_mo.mov "></video>
+    <video src="Videos/Gun_Slo_mo.mov"></video>
   </div>
 
 <section class="intro-sec2">
@@ -103,11 +103,11 @@
                 </div>
             </div>
             <div class="right">
-                <div><img src="../images/statistics-home-1.jpeg" alt="" class="image"></div>
-                <div><img src="../images/statistics-home-3.jpeg" alt="" class="image"></div>
-                <div><img src="../images/statistics-home-2.jpeg" alt="" class="image"></div>
-                <div><img src="../images/statistics-home-4.jpeg" alt="" class="image"></div>
-                <div><img src="../images/statistics-home-5.jpeg" alt="" class="image"></div>
+                <div><img src="images/statistics-home-1.jpeg" alt="" class="image"></div>
+                <div><img src="images/statistics-home-2.jpeg" alt="" class="image"></div>
+                <div><img src="images/statistics-home-3.jpeg" alt="" class="image"></div>
+                <div><img src="images/statistics-home-4.jpeg" alt="" class="image"></div>
+                <div><img src="images/statistics-home-5.jpeg" alt="" class="image"></div>
 
             </div>
         </div>
@@ -121,14 +121,14 @@
 <section class="towhere">
     <div class="video-wrapper">
         <video playsinline autoplay muted loop poster="cake.jpg">
-        <source src="/Users/akdas/Desktop/Videos/bg_video.mov " type="video/mp4">
+        <source src="../Coded-by-Kids-HTML-Project/Videos/bg_video.mov" type="video/mp4">
         Your browser does not support the video tag.
         </video>
     
         <div class="header">
         <h1>We know the Statistics</h1>
         <p>But to actually stop gun violence in philly, we need to know where it happens the most, 
-            so we can target it, and eradicate it from those ares</p>
+            so we can target it, and eradicate it from those areas</p>
         <a href="#">Learn Where</a>
         </div>
     </div>
