--- a/statistics.html
+++ b/statistics.html
@@ -121,7 +121,7 @@
 <section class="towhere">
     <div class="video-wrapper">
         <video playsinline autoplay muted loop poster="cake.jpg">
-        <source src="../Coded-by-Kids-HTML-Project/Videos/bg_video.mov" type="video/mp4">
+        <source src="Videos/bg_video.mov" type="video/mp4">
         Your browser does not support the video tag.
         </video>
     
