--- a/statistics.html
+++ b/statistics.html
@@ -44,7 +44,7 @@
 
 <div class="intro">
     <h1></h1>
-    <video src="Videos/Gun_Slo_mo.mov"></video>
+    <video src="Videos/Gun_Slo_mo.mp4"></video>
   </div>
 
 <section class="intro-sec2">
@@ -121,7 +121,7 @@
 <section class="towhere">
     <div class="video-wrapper">
         <video playsinline autoplay muted loop poster="cake.jpg">
-        <source src="Videos/bg_video.mov" type="video/mp4">
+        <source src="Videos/bg_video.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
     
