changed home screen, added finished media queries

--- a/statistics.html
+++ b/statistics.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="CSS/statistics.css">
     <link rel="icon" href="images/Website-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">  
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <title>Philly Gun Violence Statistics</title>
     
 </head>
@@ -22,11 +21,10 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="statistics.html">Statistics</a></li>
-                        <li><a href="where.html">Where</a></li>
-                        <li><a href="prevention.html">Prevention</a></li>
-                        <li><a href="about-the-author.html">My Mission</a></li>
+                        <li><a href="index.html">Home <span class="hide">→</span></a></li>
+                        <li><a href="where.html">Where <span class="hide">→</span></a></li>
+                        <li><a href="prevention.html">Prevention <span class="hide">→</span></a></li>
+                        <li><a href="about-the-author.html">My Mission <span class="hide">→</span></a></li>
                     </ul>
                 </div>
             </div>
